# django-secure-media

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  runtests.py  tox.ini
docs/: index.md
example/secure_media_example/: manage.py
example/secure_media_example/secure_media_example/: asgi.py  forms.py  media_policies.py  settings.py  urls.py  views.py  wsgi.py
example/secure_media_example/templates/: catalog.html  index.html  upload.html
src/django_secure_media/: __init__.py  apps.py  decorators.py  policies.py  tests.py
tests/: test_settings.py  tests.py
